@@ -1,3 +1,4 @@
+Made fuzzy electron shell graphic pickable if visible and if it contains any electrons
 # 0.00.08 (44901) Oct 8, 2010
 10/8/10 Publishing new version for review by team.
 Removed duplicate copy of max/min buttons 
